--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,13 +5,13 @@ body {
 }
 
 /*all links on whole page*/
-a,p{
+body a,p{
 	text-decoration: none;
 	color: #99badd;
 }
 
 /*makes all links red when mouse hover over.  Doesn't apply to strap for some reason*/
-a:hover{
+body a:hover{
 	color: red;
 	text-decoration: none;
 }
@@ -34,7 +34,7 @@ h1{
 	/*overflow: hidden;*/
 }
 
-.template-head {
+.hastings-header {
 	font-size: 25px;
 	text-align: center;
 }
@@ -46,51 +46,54 @@ h1{
 }
 
 /*provisions, name, & second-nav(contact)*/
-.info{
+#my-info{
 	text-align: center;
 	margin-top: 60px;
 }
 
-#provisions{
+#my-job{
 	font-size: 25px;
 }
 
 /*name at top*/
-#name{
+#my-name{
 	font-size: 60px;
 }
 
 /*contact*/
-#second-nav{
+#my-contact-link{
 	font-size: 25px;
 	border: solid;
+	border-color: #99badd;
 	border-radius: 15px 50px 15px 50px;
 	margin-right: 40%;
 	margin-left: 40%;
 }
 
-#mid-container{
+/*Make sure this is noooooooooooooooooooot affecting other pages*/
+#home-mid-container{
 	margin-top: 10px;
-	margin-right:10px;
+	margin-right:30px;
+	margin-left: 10px;
 }
 
-#mid-container p{
+#home-mid-container p{
 	margin-right: 10px;
 	margin-left: 10px;
 }
 
-#mid-container ul{
+#home-mid-container ul{
 	padding-left: 15px;
 }
 
-#mid-container li{
+#home-mid-container li{
 	margin-top: 10px;
 	margin-right: 10px;
 	margin-left: 10px;
 }
 
-/*Side Content for all pages*/
-#sidebar{
+/*Side Content for all pages*//*This neeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeds to be looked at*/
+.sidebar{
 	width: 30%;
 	float: right;
 	border-right: solid;
@@ -101,7 +104,7 @@ h1{
 	box-shadow:  15px 10px 25px 1px;
 }
 
-#sidebar-index{
+#home-sidebar{
 	width: 30%;
 	float: right;
 	text-align: center;
@@ -113,53 +116,53 @@ h1{
 	box-shadow:  15px 10px 25px 1px #A8310A;
 }
 
-#sidebar-index h1{
+#home-sidebar h1{
 	color: white;
 	font-size: 30px;
 	margin-bottom: 10px;
 }
 
-#sidebar-index iframe{
+#home-sidebar iframe{
 	width: 90%;
 	height: 400px;
 	margin-top: 0;
 	margin-bottom: 10px;
 }
 
-/*main content on left side of index*/
-#main{
+/*main content on left side of home page*/
+#home-main{
 	margin-right: 30%; 
 }
 
-#main p{
+#home-main p{
 	font-weight: bold;
 }
 
-#main p:first-letter{
+#home-main p:first-letter{
 	font-size: 22px;
 }
 
-#left-column{
+#home-left-column{
 	float: left;
 	width: 33.333333%;
 }
 
-#middle-column{
+#home-middle-column{
 	margin-right: 33.333333%;
 	margin-left: 33.333333%;
 }
 
-#right-column{
+#home-right-column{
 	float: right;
 	width: 33.333333%;
 }
 
-#push{
+/*#push{
 	clear: both;
 	height: 100px;
-}
+}*/
 
-#template-foot{
+.hastings-footer{
 	padding-top: 15px;
 	height: 100px;
 	overflow: hidden;
@@ -170,15 +173,11 @@ h1{
 	margin: 15px 250px 0 250px;
 }
 
-#template-foot a{
+.hastings-footer a{
 	color: #99badd;
 }
 
-#template-foot a:hover{
-	color: red;
-}
-
-#template-foot p{
+.hastings-footer p{
 	font-size: 12px;
 	color: black;
 	text-align: center;
@@ -195,11 +194,6 @@ h1{
 #aboutPic img{
 	width: 75%;
 	height: 99%;
-}
-
-/*"Contact page" styling*/
-#mid-container-contact{
-	
 }
 
 #main-contact{
