--- a/stylesheet/calc_page.css
+++ b/stylesheet/calc_page.css
@@ -12,8 +12,13 @@
 #calc-window{
 	border-radius: 5px 5px 0 0;
 	margin: 5px;
-	background-color: white;
+	padding-left: 5px;
+	padding-right: 5px;
+	background-color: black;
+	color: white;
 	height: 40px;
+	font-size: 30px;
+
 }
 
 #calc-operators{
