--- a/angular2Convert/myLive-Site/src/app/footer/footer.component.html
+++ b/angular2Convert/myLive-Site/src/app/footer/footer.component.html
@@ -1,10 +1,11 @@
 <!-- footer -->
+<hr class="footer-top-line">
 <footer>
   
   <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="secondary_pages/about.html">About</a>
-      <a href="secondary_pages/blog.html">Blog</a>
+      <a href="secondary_pages/blog.html">Portfolio</a>
       <a href="docs/IT_Resume(NHCS).pdf">Resume</a>		
   </nav>
   <p>Design by Larry Hastings</p>
