--- a/angular2Convert/myLive-Site/src/app/header/header.component.html
+++ b/angular2Convert/myLive-Site/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 					<nav class="main-nav">
 						<a href="index.html">Home</a>
 						<a href="secondary_pages/about.html">About</a>
-						<a href="secondary_pages/blog.html">Blog</a>
+						<a href="secondary_pages/blog.html">Portfolio</a>
 						<a href="docs/IT_Resume(NHCS).pdf">Resume</a>	
 					</nav>
 					<!-- contact info -->
