--- a/angular2Convert/myLive-Site/src/app/header/header.component.html
+++ b/angular2Convert/myLive-Site/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 			<!-- top container for header, name, and contact-resume -->
-			<div class="jumbotron">
+			<div class="jumbotron strap">
 				<!-- header, contains nav bar and contact info -->
 				<header class="hastings-header">
 					<nav class="main-nav">
