--- a/angular2Convert/practice-angular-cli/src/app/user-list/user-list.component.html
+++ b/angular2Convert/practice-angular-cli/src/app/user-list/user-list.component.html
@@ -1,3 +1,3 @@
-<p *ngFor="let name of names">
-  Hello {{name}}
-</p>
+<ul>
+  <app-user-item *ngFor="let name of names" [name]="name"></app-user-item>
+</ul>
