--- a/angular2Convert/myLive-Site/src/app/app.component.html
+++ b/angular2Convert/myLive-Site/src/app/app.component.html
@@ -1,7 +1,8 @@
-
-<h1>
   <app-header></app-header>
-  {{title}}
+<div class="row">
+<!--Insert body content here-->
+<app-home></app-home>
+</div>
   <app-footer></app-footer>
   
-</h1>
+
