--- a/angular2Convert/myLive-Site/src/app/app.component.html
+++ b/angular2Convert/myLive-Site/src/app/app.component.html
@@ -1,7 +1,8 @@
   <app-header></app-header>
 <div class="row">
-<!--Insert body content here-->
-<app-home></app-home>
+<!--Insert body content here  maybe??-->
+
+
 </div>
   <app-footer></app-footer>
   
