--- a/angular2Convert/myLive-Site/src/app/home/home.component.html
+++ b/angular2Convert/myLive-Site/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<title>Larry Hastings</title>
 					<div id="home-left-container" class="col-md-8  col-xs-12">
 						<section class="col-md-4  col-xs-12">		
 							<h1>Website Design</h1>
