--- a/angular2Convert/myLive-Site/src/app/app.component.html
+++ b/angular2Convert/myLive-Site/src/app/app.component.html
@@ -1,7 +1,8 @@
   <app-header></app-header>
 <div class="row">
-<!--Insert body content here  maybe??-->
 
+<!--Insert body content here  maybe??-->
+<router-outlet></router-outlet>
 
 </div>
   <app-footer></app-footer>
