--- a/angular2Convert/myLive-Site/src/app/home/home.component.html
+++ b/angular2Convert/myLive-Site/src/app/home/home.component.html
@@ -1,7 +1,18 @@
 <title>Larry Hastings</title>
-					<div id="home-left-container" class="col-md-8  col-xs-12">
-						<section class="col-md-4  col-xs-12">		
-							<h1>Website Design</h1>
+					
+					<section class="left-home col-md-8">
+					</section>
+					<section class="col-md-4  col-xs-12"><!-- side content on right side -->	
+						<aside  class="blog-side col-md-12">
+							<h1>Blog</h1>
+							<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
+						</aside>
+					</section> <!-- end home-aside -->
+
+
+					<!--<section id="home-left-container" class="col-md-8  col-xs-12">
+						<div class="col-md-4  col-xs-12">		
+							<h1>Web Design</h1>
 							<p>The visual layout and style of your website is important.  There are many
 								aspects that must be thought about during the planning phase such as branding,
 								strategy, and appealing content, but a website also needs to serve as a business
@@ -11,10 +22,10 @@
 								pleasing to look at while serving its purpose with a layout that makes it easy for
 								the end-user to find necessary information, interact with business resources, and, 
 								ultimately, promote the interests of the owning organization.</p>							
-						</section> <!-- end left-column -->
+						</div> 
 				
-						<section class="col-md-4  col-xs-12">
-							<h1>Website Deployment</h1>
+						<div class="col-md-4  col-xs-12">
+							<h1>Web Deployment</h1>
 							<p>Where or how will you host your website?  There are many options, but it comes 
 								down your needs and requirements.  I can advise and provide options for
 								your unique situation.  Below are some general options for website 
@@ -26,10 +37,10 @@
 								<li>Managed Cloud Server</li>
 								<li>Non-managed Cloud Provider</li>
 							</ul>
-						</section> <!-- end middle-column -->
+						</div> 
 
-						<section class="col-md-4  col-xs-12">
-							<h1>Website Optimization</h1>
+						<div class="col-md-4  col-xs-12">
+							<h1>Web Optimization</h1>
 							<p>Using good practices and anlytics to increase traffic to your website is the 
 								best way to spread your message and introduce new users to your products.  
 								Analytics are important becuase one can view statistical reports, analyze 
@@ -42,14 +53,7 @@
 								<li>Web Analytics</li>
 								<li>Web Governance</li>
 							</ul>
-						</section> <!-- end right-column -->
-					</div> <!-- end main-left content -->
-
-					<div class="col-md-4  col-xs-12"><!-- side content on right side -->	
-						<aside  class="sidebar col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-							<h1>Blog</h1>
-							<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
-						</aside>
-					</div> <!-- end home-aside -->
+						</div>
+					-->
 
 
