--- a/angular2Convert/my-site/src/app/footer/footer.component.html
+++ b/angular2Convert/my-site/src/app/footer/footer.component.html
@@ -1,8 +1,7 @@
 <!-- footer -->
 <div class="row">
-  <div class="col-md-12">
-    <hr class="footer-top-line">
-    <footer>
+    <footer class="col-md-12">
+      <hr class="footer-top-line">
       <nav class="main-nav">
           <a href="index.html">Home</a>
           <a href="secondary_pages/about.html">About</a>
@@ -11,5 +10,4 @@
       </nav>
       <p>Design by Larry Hastings</p>
     </footer>
-  </div>
 </div>
