--- a/angular2Convert/my-site/src/app/header/header.component.html
+++ b/angular2Convert/my-site/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <!-- top container for header, name, and contact-resume -->
 <div class='row'>			
-	<div class='jumbotron strap' style='border-radius:0;'>
 		<!-- header, contains nav bar and contact info -->
-		<header class='hastings-header'>
+		<header class='jumbotron strap'>
 			<nav class='main-nav'>
 				<a href='/home'>Home</a>
 				<a href='secondary_pages/about.html'>About</a>
@@ -18,5 +17,4 @@
 				</nav>
 			</div>
 		</header>
-	</div>
 </div>
