--- a/angular2Convert/my-site/src/app/home/home.component.html
+++ b/angular2Convert/my-site/src/app/home/home.component.html
@@ -1,10 +1,9 @@
-
 <div class="row">
 	<section class="left-home col-md-8">
 	</section>
 
 	<section class="col-md-4"><!-- side content on right side -->	
-		<aside  class="blog-side col-md-12">
+		<aside  class="col-md-12">
 			<h1>Blog</h1>
 			<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
 		</aside>
