--- a/angular2Convert/my-site/src/app/contact/contact.component.html
+++ b/angular2Convert/my-site/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="container">
     <h1>Contact Me Here</h1>
-    <form>
+    <form novalidate>
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" required>
