--- a/angular2Convert/my-site/src/app/header/header.component.html
+++ b/angular2Convert/my-site/src/app/header/header.component.html
@@ -5,8 +5,8 @@
 			<nav class='main-nav'>
 				<a href='/home'>Home</a>
 				<a href='secondary_pages/about.html'>About</a>
-				<a href='secondary_pages/blog.html'>Portfolio</a>
-				<a href='docs/IT_Resume(NHCS).pdf'>Resume</a>	
+				<a href='/portfolio'>Portfolio</a>
+				<a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a>	
 			</nav>
 			<!-- contact info -->
 			<div id='my-info'>
