--- a/angular2Convert/my-site/src/app/footer/footer.component.html
+++ b/angular2Convert/my-site/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
 <!-- footer -->
 <div class="row">
     <footer class="col-md-12">
-      <hr class="footer-top-line">
-      <nav class="main-nav">
-          <a href="index.html">Home</a>
-          <a href="secondary_pages/about.html">About</a>
-          <a href="secondary_pages/blog.html">Portfolio</a>
-          <a href="docs/IT_Resume(NHCS).pdf">Resume</a>		
-      </nav>
-      <p>Design by Larry Hastings</p>
+        <hr class="footer-top-line">
+        <nav class='main-nav'>
+            <a href='/home'>Home</a>
+            <a href='/about'>About</a>
+            <a href='/portfolio'>Portfolio</a>
+            <a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a>	
+        </nav>
+        <p>Design by Larry Hastings</p>
     </footer>
 </div>
