--- a/angular2Convert/my-site/src/app/header/header.component.html
+++ b/angular2Convert/my-site/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 		<header class='jumbotron strap'>
 			<nav class='main-nav'>
 				<a href='/home'>Home</a>
-				<a href='secondary_pages/about.html'>About</a>
+				<a href='/about'>About</a>
 				<a href='/portfolio'>Portfolio</a>
 				<a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a>	
 			</nav>
