--- a/angular2Convert/my-site/src/app/contact/contact.component.html
+++ b/angular2Convert/my-site/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-header-small></app-header-small>
 <div class="row">
   <div class="message container col-md-8 col-md-offset-2">
     <p>Hello, thank you for visiting my site.  Please use the contact form below to get in touch with me.  Be assured, if you are legitimate in your inquiry, I will promptly make contact with you using the supplied email.  Have a wonderful day!</p>
