--- a/angular2Convert/my-site/src/app/footer/footer.component.html
+++ b/angular2Convert/my-site/src/app/footer/footer.component.html
@@ -8,6 +8,6 @@
             <a href='/portfolio'>Portfolio</a>
             <a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a>	
         </nav>
-        <p>Design by Larry Hastings</p>
+        <p>Larry Hastings</p>
     </footer>
 </div>
