--- a/angular2Convert/my-site/src/app/header-small/header-small.component.html
+++ b/angular2Convert/my-site/src/app/header-small/header-small.component.html
@@ -1,14 +1,15 @@
 <div class='row'>
   <header>
-    <button type='button' class='small-menu' data-toggle='collapse' data-target='#nav'>Site Menu</button>
-    <nav id='nav' class='pop-nav collapse'>
-          <ul>
-            <li><a href='/home'>Home</a></li>
-            <li><a href='/about'>About</a></li>
-            <li><a href='/portfolio'>Portfolio</a></li>
-            <li><a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a></li>	
-            <li><a href='/contact'>Contact</a></li>
-          </ul>
+    <nav id="nav-interactive-style">
+      <button id='menu-button'><div id="inner-button">Menu</div></button>
+      <ul id='nav-list' class='hide'>
+        <li><a href='/home'>Home</a></li>
+        <li><a href='/about'>About</a></li>
+        <li><a href='/portfolio'>Portfolio</a></li>
+        <li><a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a></li>	
+        <li><a href='/contact'>Contact</a></li>
+      </ul>
     </nav>
   </header>
 </div>
+
