--- a/angular2Convert/my-site/src/app/header-small/header-small.component.html
+++ b/angular2Convert/my-site/src/app/header-small/header-small.component.html
@@ -1,13 +1,13 @@
 <div class='row'>
   <header>
-    <nav id="nav-interactive-style">
-      <button id='menu-button'><div id="inner-button">Menu</div></button>
+    <nav id='nav-pop' class=''>
+      <button id='menu-button'><div id='inner-button'>Menu</div></button>
       <ul id='nav-list' class='hide'>
-        <li><a href='/home'>Home</a></li>
-        <li><a href='/about'>About</a></li>
-        <li><a href='/portfolio'>Portfolio</a></li>
-        <li><a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a></li>	
-        <li><a href='/contact'>Contact</a></li>
+        <li><button><a href='/home'>Home</a></button></li>
+        <li><button><a href='/about'>About</a></button></li>
+        <li><button><a href='/portfolio'>Portfolio</a></button></li>
+        <li><button><a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a></button></li>	
+        <li><button><a href='/contact'>Contact</a></button></li>
       </ul>
     </nav>
   </header>
