--- a/angular2Convert/my-site/src/app/contact/contact.component.html
+++ b/angular2Convert/my-site/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<title>Contact</title>
 <app-header-small></app-header-small>
 <div class="row">
   <div class="message container col-md-8 col-md-offset-2">
