--- a/angular2Convert/my-site/src/app/checklist/checklist.component.html
+++ b/angular2Convert/my-site/src/app/checklist/checklist.component.html
@@ -1,17 +1,17 @@
 <section class='checklist-container'>
-					<form class='checklist'>
-						
-						<section>
-						<p class='limit-text'>Character Count Limit: <span class='limit'>40</span></p>
-						<input class='input' placeholder="Add checklist items here!" cols='100'>
-						<input class='btn btn-primary' type="button" value="Add">
-						</section>
-						
-						<p class='instruction'>Double-Click to Check Off Items</p>
-						
-						<ul class='checklist-items'>
-						</ul>
-						
-					</form>
-					
-				</section>
+	<form class='checklist'>
+		
+		<div>
+		<p class='limit-text'>Character Count Limit: <span class='limit'>40</span></p>
+		<input class='input' placeholder="Add checklist items here!" cols='100'>
+		<input class='btn btn-primary add' type="button" value="Add">
+		</div>
+		
+		<p class='instruction'>Double-Click to Check Off Items</p>
+		
+		<ul class='checklist-items'>
+		</ul>
+		
+	</form>
+	
+</section>
