--- a/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.css
+++ b/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.css
@@ -3,4 +3,18 @@
     background-size: cover;
     height: 100vh;
     width: 100%;
+    position: relative;
+}
+.gadget-container{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+.left-gadget{
+    max-height: 350px;
+    overflow-y: scroll;
+    margin-bottom: 2px;
+}
+::-webkit-scrollbar{
+    width: 0px;
 }
