--- a/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
+++ b/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
@@ -1,5 +1,9 @@
 <title>Relax and Work</title>
 <app-header-small></app-header-small>
 <div class='background'>
-    
+    <section class="row gadget-container">
+        <div class="left-gadget col-xs-10 col-xs-offset-1"><app-checklist></app-checklist></div>
+        <div class="col-xs-10"><!--some drawing app--></div>
+        <div class="right-gadget col-xs-10 col-xs-offset-1"><app-calculator></app-calculator></div>
+    </section>
 </div>
