--- a/angular2Convert/my-site/src/app/checklist/checklist.component.html
+++ b/angular2Convert/my-site/src/app/checklist/checklist.component.html
@@ -7,7 +7,7 @@
 		<input class='btn btn-primary add' type="button" value="Add">
 		</div>
 		
-		<p class='instruction'>Double-Click to Check Off Items</p>
+		<p class='instruction'>Double-Click to Clear Item</p>
 		
 		<ul class='checklist-items'>
 		</ul>
