--- a/angular2Convert/my-site/src/app/calculator/calculator.component.css
+++ b/angular2Convert/my-site/src/app/calculator/calculator.component.css
@@ -3,9 +3,9 @@
 	border: solid;
 	border-color: #99badd;
 	height: 325px;
-	width: 320px;
+	width: 268px;
 	border-radius: 10px;
-	margin-bottom: 40px;
+	user-select: none;
 }
 
 #calc-window{
@@ -21,48 +21,62 @@
 
 #calc-operators{
 	float: right;
-	width: 95px;
+	width: 30%;
+	height: 270px;
 	border: solid;
 	border-width: 1px;
 	border-color: #99badd;
+	border-radius: 0 0 10px 0;
 	text-align: center;
 }
 
 .operator-button{
-	margin: 15px;
+	margin: 12%;
 	border: solid;
 	border-color: white;
 	width: 40px;
 	height: 24px;
 	text-align: center;
 	display: inline-block;
+	cursor: pointer;
 }
-
+.operator-button:active{
+	box-shadow: 0 0 0 2px #99badd inset;
+}
 .operator-button p{
 	margin: auto;
 	padding-top: 2%;
 	padding-bottom: 2%;
 	color: white;
 }
-
+.operator-button p:active{
+	color: red;
+}
 #calc-numbers{
-	width: 300px;
+	width: 70%;
 	text-align: center;
 	color: white;
 }
 
 .number-button{
-	margin: 15px;
+	margin: 5%;
 	border: solid;
 	border-color: white;
-	width: 40px;
-	height: 40px;
+	width: 38px;
+	height: 38px;
 	text-align: center;
 	display: inline-block;
+	cursor: pointer;
+}
+.number-button:active{
+	box-shadow: 0 0 0 2px #99badd inset;
 }
 
 .number-button p{
 	margin: auto;
 	padding-top: 35%;
 	padding-bottom: 35%;
+}
+.number-button p:hover{
+	color: red;
 }
