--- a/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.css
+++ b/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.css
@@ -9,12 +9,23 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    padding-bottom: 20px;
 }
 .left-gadget{
-    max-height: 350px;
+    max-height: 300px;
     overflow-y: scroll;
-    margin-bottom: 2px;
+    margin-bottom: 20px;
 }
 ::-webkit-scrollbar{
     width: 0px;
+}
+@media screen and (max-width: 480px){
+    .gadget-container{
+        margin-top: 100px;
+        bottom: auto;
+    }
+    .background{
+        height: 150vh;
+    }
+
 }
