--- a/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
+++ b/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
@@ -1,9 +1,13 @@
 <title>Relax and Work</title>
 <app-header-small></app-header-small>
+<!--<app-music></app-music>-->
 <div class='background'>
-    <section class="row gadget-container">
-        <div class="left-gadget col-xs-10 col-xs-offset-1"><app-checklist></app-checklist></div>
-        <div class="col-xs-10"><!--some drawing app--></div>
-        <div class="right-gadget col-xs-10 col-xs-offset-1"><app-calculator></app-calculator></div>
+    <section class="gadget-container row">
+        <div class='col-sm-6'>
+            <div class="left-gadget col-xs-10 col-xs-offset-1"><app-checklist></app-checklist></div>
+        </div>
+        <div class='col-sm-6'>
+            <div class="right-gadget col-lg-3 col-lg-offset-6 col-md-4 col-md-offset-5 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1"><app-calculator></app-calculator></div>
+        </div>
     </section>
 </div>
