--- a/angular2Convert/my-site/src/app/about/about.component.html
+++ b/angular2Convert/my-site/src/app/about/about.component.html
@@ -1,5 +1,26 @@
 <title>About</title>
 <app-header-small></app-header-small>
-<p>
-  about works!
-</p>
+<div class='row'>
+	<div id="about-pic" class='col-md-6 col-md-offset-3'>
+		<section id="about-info" class="col-md-10 col-md-offset-1">
+			<h1>About Me</h1>
+			<p>My name is Larry.  I have worked in numerous technology related jobs thoughout my
+				life.  Through various experience and education, I have gained a good understanding
+				of how websites function including the underlying infrastructure.  I will be 
+				completing my masters at East Carolina University in May 2016, majoring in network technology.  
+				While doing so, I find myself working for the local school system here in Wilmington, NC
+				providing end-user support and overseeing the organization's webiste.</p>
+			<p>In the meantime, I am really trying to focus on the LAMP stack, which involves me setting up
+				a Linux machine in the cloud to host the apache server that this website runs atop. 
+				I feel this gives me full exposure to the underpinnings of what makes a website tick by
+				building it from the ground up, while also letting me work with MySQL and a scripting 
+				language.</p>  
+			<p>If you found this page in search of a web service, please know that I will help you in
+				any way I can, but if I feel your needs are out of the scope of my abilities, or if you have 
+				a strict deadline that cannot be met, I will let you know.</p>
+			<p>Thanks for visiting!</p>
+		</section>
+	</div>
+</div>
+			
+	
