--- a/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
+++ b/angular2Convert/my-site/src/app/relax-workspace/relax-workspace.component.html
@@ -1,6 +1,6 @@
 <title>Relax and Work</title>
 <app-header-small></app-header-small>
-<!--<app-music></app-music>-->
+<app-music></app-music>
 <div class='background'>
     <section class="gadget-container row">
         <div class='col-sm-6'>
