--- a/angular2Convert/my-site/src/app/about/about.component.html
+++ b/angular2Convert/my-site/src/app/about/about.component.html
@@ -1,8 +1,10 @@
 <title>About</title>
 <app-header-small></app-header-small>
 <div class='row'>
-	<div id="about-pic" class='col-md-6 col-md-offset-3'>
-		<section id="about-info" class="col-md-10 col-md-offset-1">
+	<div id="about-pic" class='col-md-6'>
+	</div>
+	<div class='col-md-6'>
+		<section id="about-info" class="col-md-10 col-md-offset-1 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 			<h1>About Me</h1>
 			<p>My name is Larry.  I have worked in numerous technology related jobs thoughout my
 				life.  Through various experience and education, I have gained a good understanding
