--- a/angular2Convert/my-site/src/app/app.component.html
+++ b/angular2Convert/my-site/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--Routed Views-->
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
