--- a/angular2Convert/my-site/src/app/footer/footer.component.html
+++ b/angular2Convert/my-site/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         <a href='/home'>Home</a>
         <a href='/about'>About</a>
         <a href='/portfolio'>Portfolio</a>
-        <a href='../assets/docs/IT_Resume(NHCS).pdf'>Resume</a>	
+        <a href='../assets/docs/IT_Resume(NHCS).pdf' target='_blank'>Resume</a>	
     </nav>
     <p>Larry Hastings</p>
 </footer>
