--- a/angular2Convert/my-site/src/styles.css
+++ b/angular2Convert/my-site/src/styles.css
@@ -2,5 +2,8 @@
 body{
 	font-family: sans-serif, Arial, Helvetica;
 	background-color: #f9f2ec;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
 }
 /*makes all links red when mouse hover over.  Doesn't apply to strap for some reason*/
