--- a/angular2Convert/my-site/src/app/about/about.component.css
+++ b/angular2Convert/my-site/src/app/about/about.component.css
@@ -1,12 +1,13 @@
 /*"About page" styling*/
 #about-pic{
 	background: #f9f2ec url('../../assets/imgs/lh.jpg') no-repeat;
-	height: 100vh;
+	height: 926px;
 	padding-top: 50px;
 }
 #about-info h1{
 	font-weight: bold;
 	text-align: center;
+	color: #99badd;
 	text-shadow: 1px 1px 0 white,
 				-1px -1px 0 white,
 				1px -1px 0 white,
@@ -17,24 +18,29 @@
 				-1px 0px 0 white;
 }
 #about-info p{
-	font-size: 18px;
-	color: #99badd;
+	font-size: 20px;
 	font-weight: bold;
-	text-shadow: 1px 1px 0 black,
-				-1px -1px 0 black,
-				1px -1px 0 black,
-				-1px 1px 0 black,
-				0px 1px 0 black,
-				1px 0px 0 black,
-				0px -1px 0 black,
-				-1px 0px 0 black;
+	text-shadow: 1px 1px 0 white,
+				-1px -1px 0 white,
+				1px -1px 0 white,
+				-1px 1px 0 white,
+				0px 1px 0 white,
+				1px 0px 0 white,
+				0px -1px 0 white,
+				-1px 0px 0 white;
 }
 #about-info p:first-letter{
 	font-size: 30px;
 }
-@media screen and(max-width: 992px){
+@media screen and (max-width: 1103px){
 	#about-info p{
-		font-size: 17px;
+		font-size: 16px;
 	}
 }
+@media screen and (max-width: 416px){
+	#about-info p{
+		font-size: 15px;
+	}
+}
+
 
