--- a/angular2Convert/my-site/src/app/home/home.component.html
+++ b/angular2Convert/my-site/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <title>Larry Hastings</title>
 <app-header></app-header>
-<div class="row">
-	<section class="left-home col-md-8">
+<div class="clearfix">
+	<section class="left-home col-md-8 col-md-offset-0 col-xs-8 col-xs-offset-2">
 	</section>
 
-	<section class="col-md-4"><!-- side content on right side -->	
-		<aside  class="col-md-11">
+	<section class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12"><!-- side content on right side -->	
+		<aside  class="col-md-12">
 			<h1>Blog</h1>
 			<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
 		</aside>
