--- a/angular2Convert/my-site/src/app/home/home.component.html
+++ b/angular2Convert/my-site/src/app/home/home.component.html
@@ -2,6 +2,18 @@
 <app-header></app-header>
 <div class="clearfix">
 	<section class="left-home col-md-8 col-md-offset-0 col-xs-8 col-xs-offset-2">
+		<div class="row">
+		</div>
+		<div class="row">
+		</div>
+		<div class="row">
+		</div>
+		<div class="row">
+			<div id="hand"><img src="../../assets/imgs/hand.jpg" alt="hand holding web ideas">
+		</div>
+
+
+
 	</section>
 
 	<section class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12"><!-- side content on right side -->	
