--- a/angular2Convert/my-site/src/app/home/home.component.html
+++ b/angular2Convert/my-site/src/app/home/home.component.html
@@ -1,18 +1,20 @@
 <title>Larry Hastings</title>
 <app-header></app-header>
 <div class="clearfix">
-	<section class="left-home col-md-8 col-md-offset-0 col-xs-8 col-xs-offset-2">
-		<div class="row">
-		</div>
-		<div class="row">
-		</div>
-		<div class="row">
-		</div>
-		<div class="row">
-			<div id="hand"><img src="../../assets/imgs/hand.jpg" alt="hand holding web ideas">
-		</div>
+	<section class="left-home col-md-8 col-md-offset-0 col-xs-12">
 
-
+		<div class="floating-words clearfix">
+			<button>Performance Optimaization</button><button>User Interaction</button><button>Browser Compatability</button><button>Mobile Friendly</button>
+		</div>
+		<div class="floating-words clearfix">
+			<button>User Interface</button><button>Web Governance</button><button>Analytics</button>
+		</div>
+		<div class="floating-words clearfix">
+			<button>SEO</button><button>Database</button>
+		</div>
+		<div class="clearfix">
+			<div align="center" id="hand"><img src="../../assets/imgs/hand.jpg" alt="hand holding web ideas"></div>
+		</div>
 
 	</section>
 
