--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,12 @@
 <title>Portfolio</title>
 <app-header-small></app-header-small>
-<p>
-  portfolio works!
-</p>
+<section class="row items">
+  <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-4 item"><a href="" style="border: thin solid black; width: 100%; height: 100%;"></a></div>
+      <div class="col-md-4 item">j</div>
+      <div class="col-md-4 item">j</div>
+      <div class="col-md-4 item">v</div>
+      <div class="col-md-4 item">g</div>
+      <div class="col-md-4 item">j</div>
+  </div>
+</section>
