--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -1,12 +1,12 @@
 <title>Portfolio</title>
 <app-header-small></app-header-small>
-<section class="row items">
-  <div class="col-md-8 col-md-offset-2">
-      <div class="col-md-4 item"><a href="" style="border: thin solid black; width: 100%; height: 100%;"></a></div>
-      <div class="col-md-4 item">j</div>
-      <div class="col-md-4 item">j</div>
-      <div class="col-md-4 item">v</div>
-      <div class="col-md-4 item">g</div>
-      <div class="col-md-4 item">j</div>
+<section class='row'>
+  <div class='items col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
+      <div class='col-md-4 item'><a href='/relax-workspace'>Relaxing Workspace</a></div>
+      <div class='col-md-4 item'><a href=''>A</a></div>
+      <div class='col-md-4 item'><a href=''>A</a></div>
+      <div class='col-md-4 item'><a href=''>A</a></div>
+      <div class='col-md-4 item'><a href=''>A</a></div>
+      <div class='col-md-4 item'><a href=''>A</a></div>
   </div>
 </section>
