--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -2,11 +2,14 @@
 <app-header-small></app-header-small>
 <section class='row'>
   <div class='items col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-      <div class='col-md-4 item'><a href='/relax-workspace'>Relaxing Workspace</a></div>
-      <div class='col-md-4 item'><a href=''>A</a></div>
-      <div class='col-md-4 item'><a href=''>A</a></div>
-      <div class='col-md-4 item'><a href=''>A</a></div>
-      <div class='col-md-4 item'><a href=''>A</a></div>
-      <div class='col-md-4 item'><a href=''>A</a></div>
+      <div class='col-md-4 item '><a class="circle" href='/relax-workspace'>Relaxing Workspace</a></div>
+      <div class='col-md-4 item '><a href=''>A</a></div>
+      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a class="circle" href=''>A</a></div>
+      <div class='col-md-4 item '><a href=''>A</a></div>
+      <div class='col-md-4 item '><a href=''>A</a></div>
+      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a class="circle" href=''>A</a></div>
   </div>
 </section>
