--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -2,14 +2,14 @@
 <app-header-small></app-header-small>
 <section class='row'>
   <div class='items col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-      <div class='col-md-4 item '><a class="circle" href='/relax-workspace'>Relaxing Workspace</a></div>
-      <div class='col-md-4 item '><a href=''>A</a></div>
-      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a class="circle" href=''>A</a></div>
-      <div class='col-md-4 item '><a href=''>A</a></div>
-      <div class='col-md-4 item '><a href=''>A</a></div>
-      <div class='col-md-4 item '><a class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a class="circle" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="one" class="circle" href='/relax-workspace'>Relaxing Workspace</a></div>
+      <div class='col-md-4 item '><a id="two" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="three" class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="four" class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="five" class="circle" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="six" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="seven" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="eight" class="semi" href=''>A</a></div>
+      <div class='col-md-4 item '><a id="nine" class="circle" href=''>A</a></div>
   </div>
 </section>
