--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.css
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.css
@@ -10,7 +10,7 @@
     height: 100%;
     width: 100%;
     display: block;
-    border: thin black solid;
+    border: thin #99badd solid;
     padding-top: 50px;
     opacity: 1;
 }
@@ -22,4 +22,28 @@
 }
 #one{
     background-image: url("../../assets/imgs/curacao_beach.jpg");
+}
+#two{
+    background-image: url("../../assets/imgs/brazil_favela.jpg");
+}
+#three{
+    background-image: url("../../assets/imgs/corn_island_boat.jpg");
+}
+#four{
+    background-image: url("../../assets/imgs/kirkenes_city_sign.jpg");
+}
+#five{
+    background-image: url("../../assets/imgs/japanese_egret.jpg");
+}
+#six{
+    background-image: url("../../assets/imgs/norwegian_fall.jpg");
+}
+#seven{
+    background-image: url("../../assets/imgs/oregon_garden.jpg");
+}
+#eight{
+    background-image: url("../../assets/imgs/thermometer.jpg");
+}
+#nine{
+    background-image: url("../../assets/imgs/oregon_flower.jpg");
 }
