--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -2,14 +2,14 @@
 <app-header-small></app-header-small>
 <section class='row'>
   <div class='items col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-      <div class='col-md-4 item '><a id="one" class="circle" href='/relax-workspace'>Relaxing Workspace</a></div>
-      <div class='col-md-4 item '><a id="two" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="three" class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="four" class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="five" class="circle" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="six" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="seven" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="eight" class="semi" href=''>A</a></div>
-      <div class='col-md-4 item '><a id="nine" class="circle" href=''>A</a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="one" class="circle" href='/relax-workspace'><button type="button" class='circle-btn link-words btn'>Relaxing Workspace</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="two" href=''><button type="button" class='square-btn link-words btn'>Test Test</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="three" class="semi" href=''><button type="button" class='semi-btn link-words btn'>Test Test Test</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="four" class="semi" href=''><button type="button" class='semi-btn link-words btn'>A</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="five" class="circle" href=''><button type="button" class='circle-btn link-words btn'>A</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="six" href=''><button type="button" class='square-btn link-words btn'>A</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="seven" href=''><button type="button" class='square-btn link-words btn'>A</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="eight" class="semi" href=''><button type="button" class='semi-btn link-words btn'>A</button></a></div>
+      <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="nine" class="circle" href=''><button type="button" class='circle-btn link-words btn'>A</button></a></div>
   </div>
 </section>
