--- a/angular2Convert/my-site/src/app/contact/contact.component.html
+++ b/angular2Convert/my-site/src/app/contact/contact.component.html
@@ -1,37 +1,33 @@
 <title>Contact</title>
 <app-header-small></app-header-small>
-<div class="clearfix">
-  <div class="message container col-md-8 col-md-offset-2">
-    <p>Hello, thank you for visiting my site.  Please use the contact form below to get in touch with me.  Be assured, if you are legitimate in your inquiry, I will promptly make contact with you using the supplied email.  Have a wonderful day!</p>
+<div class="empty-vh-container">
+  <div class="row">
+    <div id="contact-message" class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+      <p>Hello, thank you for visiting my site.  Please use the contact form below to get in touch with me.  Be assured, if you are legitimate in your inquiry, I will promptly make contact with you using the supplied email.  Have a wonderful day!</p>
+    </div>
   </div>
-</div>
-<div class="clearfix">
-  <div class="col-md-8 col-md-offset-2">
-
-  Practice SKU Form
-  <div class="">
-    <h2 class="">Demo Form: Sku</h2>
-    <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="">
-      <div class="field">
-          <label for="skuInput">SKU</label>
-          <input type="text" id="skuInput" placeholder="SKU" name="sku" ngModel>
-      </div>
-      <button type="submit" class="">Submit</button>
+  <div class="row">
+    <div id="contact-bg"></div>
+    <form id="contact-form" class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+        <div class="form-group">    
+          <label for="name-input">Name:</label>
+          <input type="text" class="form-control" id="name-input" placeholder="Please enter your name">
+        </div>
+        <div class="form-group">
+          <label for="email-input">Email:</label>
+          <input type="email" class="form-control" id="email-input" placeholder="Please enter email address">
+        </div>
+        <div class="form-group">
+          <label for="phone-input">Phone:</label>
+          <input type="tel" class="form-control" id="phone-input" placeholder="Please enter your phone number">
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea type="text" class="form-control" id="message" placeholder="Please leave a message" rows="4" cols="50"></textarea>
+        </div>
     </form>
   </div>
-
-  <!--Advanced SKU using FormBuilder-->
-  <div class="">
-    <h2 class="">Demo Form: Sku with Builder</h2>
-    <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm.value)" class="">
-      <div class="field">
-          <label for="skuInput">SKU</label>
-          <input type="text" id="skuInput" placeholder="SKU" [formControl]="myForm.controls['sku']">
-      </div>
-      <button type="submit" class="">Submit</button>
-      <div *ngIf="sku.touched" class="message">SKU is invalid</div>
-    </form>
-  </div>
-
-  </div>
 </div>
+
+
+
