updated about page

--- a/angular2Convert/my-site/src/app/about/about.component.html
+++ b/angular2Convert/my-site/src/app/about/about.component.html
@@ -3,7 +3,7 @@
 <div class='clearfix about-container'>
 	<div id="about-pic" class='col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-2'>
 		<div class='col-md-12 col-md-offset-12'>
-			<section id="about-info" class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12">
+			<section id="about-info" class="col-md-12 col-md-offset-0 col-sm-12 col-xs-12">
 				<h1>About Me</h1>
 				<p>My name is Larry.  I have worked in numerous technology related jobs thoughout my
 					life.  Through various experience and education, I have gained a good understanding
