--- a/angular2Convert/my-site/src/app/about/about.component.css
+++ b/angular2Convert/my-site/src/app/about/about.component.css
@@ -4,6 +4,21 @@
 	height: 926px;
 	padding-top: 50px;
 }
+@media screen and (max-width: 991px){
+	#about-info{
+		background-color: rgb(60, 60, 60);
+    	background: rgba(60, 60, 60, 0.7);
+		border-radius: 50px 50px;
+	}
+	#about-info p{
+		color: white;
+	}
+}
+@media screen and (max-width: 991px) and (min-width: 885px){
+	#about-info{
+		width:  90%;
+	}
+}
 #about-info h1{
 	font-weight: bold;
 	text-align: center;
@@ -20,14 +35,6 @@
 #about-info p{
 	font-size: 20px;
 	font-weight: bold;
-	text-shadow: 1px 1px 0 white,
-				-1px -1px 0 white,
-				1px -1px 0 white,
-				-1px 1px 0 white,
-				0px 1px 0 white,
-				1px 0px 0 white,
-				0px -1px 0 white,
-				-1px 0px 0 white;
 }
 #about-info p:first-letter{
 	font-size: 30px;
