--- a/angular2Convert/my-site/src/app/contact/contact.component.html
+++ b/angular2Convert/my-site/src/app/contact/contact.component.html
@@ -11,21 +11,23 @@
     <form id="contact-form" class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
         <div class="form-group">    
           <label for="name-input">Name:</label>
-          <input type="text" class="form-control" id="name-input" placeholder="Please enter your name">
+          <input type="text" class="form-control" id="name-input" placeholder="Please enter your name" #newname>
         </div>
         <div class="form-group">
           <label for="email-input">Email:</label>
-          <input type="email" class="form-control" id="email-input" placeholder="Please enter email address">
+          <input type="email" class="form-control" id="email-input" placeholder="Please enter email address" #newemail>
         </div>
         <div class="form-group">
           <label for="phone-input">Phone:</label>
-          <input type="tel" class="form-control" id="phone-input" placeholder="Please enter your phone number">
+          <input type="tel" class="form-control" id="phone-input" placeholder="Please enter your phone number" #newphone>
         </div>
         <div class="form-group">
           <label for="message">Message:</label>
-          <textarea type="text" class="form-control" id="message" placeholder="Please leave a message" rows="4" cols="50"></textarea>
+          <textarea type="text" class="form-control" id="message" placeholder="Please leave a message" rows="4" cols="50" #newmessage></textarea>
         </div>
+        <button type="submit" id="contact-submit" class="btn" (click)="emailMe(newname, newemail, newphone, newmessage)"><strong>Send</strong></button>
     </form>
+    
   </div>
 </div>
 
