--- a/angular2Convert/my-site/src/app/about/about.component.css
+++ b/angular2Convert/my-site/src/app/about/about.component.css
@@ -1,23 +1,15 @@
 /*"About page" styling*/
+#about-container{
+	margin-bottom: 1px;
+}
 #about-pic{
 	background: #f9f2ec url('../../assets/imgs/lh.jpg') no-repeat;
 	height: 926px;
 	padding-top: 50px;
+	margin-bottom: 2px;
 }
-@media screen and (max-width: 991px){
-	#about-info{
-		background-color: rgb(60, 60, 60);
-    	background: rgba(60, 60, 60, 0.7);
-		border-radius: 50px 50px;
-	}
-	#about-info p{
-		color: white;
-	}
-}
-@media screen and (max-width: 991px) and (min-width: 885px){
-	#about-info{
-		width:  90%;
-	}
+#about-info{
+	margin-bottom: 35px;
 }
 #about-info h1{
 	font-weight: bold;
@@ -39,6 +31,21 @@
 #about-info p:first-letter{
 	font-size: 30px;
 }
+@media screen and (max-width: 991px){
+	#about-info{
+		background-color: rgb(60, 60, 60);
+    	background: rgba(60, 60, 60, 0.7);
+		border-radius: 50px 50px;
+	}
+	#about-info p{
+		color: white;
+	}
+}
+@media screen and (max-width: 991px) and (min-width: 885px){
+	#about-info{
+		width:  90%;
+	}
+}
 @media screen and (max-width: 1103px){
 	#about-info p{
 		font-size: 16px;
@@ -47,6 +54,11 @@
 @media screen and (max-width: 416px){
 	#about-info p{
 		font-size: 15px;
+	}
+}
+@media screen and (max-width: 763px){
+	#about-info{
+		margin-bottom: 
 	}
 }
 
