--- a/angular2Convert/my-site/src/app/home/home.component.html
+++ b/angular2Convert/my-site/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <title>Larry Hastings</title>
 <app-header></app-header>
-<div class="clearfix">
+<div class="clearfix empty-vh-container">
 	<section class="left-home col-md-8 col-md-offset-0 col-xs-12">
-
 		<div class="floating-words clearfix">
 			<button>Performance Optimaization</button><button>User Interaction</button><button>Browser Compatability</button><button>Mobile Friendly</button>
 		</div>
@@ -15,7 +14,6 @@
 		<div class="clearfix">
 			<div align="center" id="hand"><img src="../../assets/imgs/hand.jpg" alt="hand holding web ideas"></div>
 		</div>
-
 	</section>
 
 	<section class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12"><!-- side content on right side -->	
