--- a/angular2Convert/my-site/src/app/contact/contact.component.css
+++ b/angular2Convert/my-site/src/app/contact/contact.component.css
@@ -44,6 +44,7 @@
     width: 80px;
     left: 50%;
     margin-left: -40px;
+    outline: none;
 }
 #contact-submit:active{
     border-color: white;
