--- a/angular2Convert/my-site/src/app/calculator/calculator.component.css
+++ b/angular2Convert/my-site/src/app/calculator/calculator.component.css
@@ -2,7 +2,7 @@
 #calc{
 	border: solid;
 	border-color: #99badd;
-	height: 325px;
+	height: 293px;
 	width: 268px;
 	border-radius: 10px;
 	user-select: none;
@@ -14,16 +14,17 @@
 	padding-left: 5px;
 	padding-right: 5px;
 	color: white;
-	height: 40px;
+	height: 50px;
 	font-size: 30px;
 	overflow-x: auto;
+	overflow-y: hidden;
 	text-align: right;
 }
 
 #calc-operators{
 	float: right;
 	width: 30%;
-	height: 270px;
+	height: 230px;
 	border: solid;
 	border-width: 1px;
 	border-color: #99badd;
